fixed general margin and border alignments

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,18 +1,13 @@
 .welcome {
   width: 100%;
-  margin-left: auto;
-  margin-right: auto;
   font-size: 1.3em;
   display:flex;
-}
-
-.buffer {
-  height: 1em;
+  padding-bottom: .5em;
 }
 
 .welcome-photo {
    width:33%;
-   padding-left: 2%;
+   padding-left: 0;
    padding-right: 2%;
 }
 
@@ -23,7 +18,5 @@
    margin-bottom: 0;
 }
 
-.welcome-text p {
-  padding-bottom: 0;
-  margin-bottom: .4em;
+.welcome-text p {;
 }
