--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -2,6 +2,7 @@
 .nav-bar {
   padding: 0;
   margin: 0;
+  margin-bottom: 1em;
   list-style: none;
   display: flex;
   background-color: lightgray;
