--- a/src/app/prayer-letters/prayer-letters.component.scss
+++ b/src/app/prayer-letters/prayer-letters.component.scss
@@ -4,8 +4,6 @@
   height: 100%;
   margin:0;
   padding:0;
-  padding-top: 1.5%;
-  padding-bottom: .5%;
 }
 
 .letter-list {
